src/test/ui/rfc1598-generic-associated-types/construct_with_other_type.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/construct_with_other_type.rs:24:37
   |
24 |     type Quux<'a> = <T as Foo>::Bar<'a, 'static>;
   |                                     ^^ undeclared lifetime

error: aborting due to previous error

